fix: remove java16 features
revert back to java11 because of the LTS